# Fool-Card-Game

./: CMakeLists.txt
include/: AI.hpp  Card.hpp  Game.hpp  Human.hpp  Player.hpp
src/: AI.cpp  Game.cpp  Human.cpp  Player.cpp  main.cpp
